# demos

cam2image/: CMakeLists.txt
cam2image/src/: cam2image.cpp  showimage.cpp
composition/: CMakeLists.txt
composition/include/composition/: listener_component.hpp  talker_component.hpp
composition/src/: listener_component.cpp  manual_composition.cpp  talker_component.cpp
demo_nodes_cpp/src/parameters/: list_parameters.cpp
image_tools/: CMakeLists.txt
image_tools/src/: showimage.cpp
image_tools/test/: test_executables_demo.py.in
intra_process_comms/: CMakeLists.txt  package.xml
intra_process_comms/include/intra_process_comms/: device_node.hpp  extractor_node.hpp  modifier_node.hpp  utils.hpp  visualizer_node.hpp
intra_process_comms/src/: img_pipeline.cpp  two_node_pipeline.cpp
intra_process_comms/src/cyclic_pipeline/: cyclic_pipeline.cpp
intra_process_comms/src/image_pipeline/: camera_node.hpp  common.hpp  image_view_node.hpp  watermark_node.hpp
intra_process_comms/src/two_node_pipeline/: two_node_pipeline.cpp
intra_process_demo/: CMakeLists.txt
intra_process_demo/include/intra_process_demo/image_pipeline/: camera_node.hpp  common.hpp  image_view_node.hpp
intra_process_demo/src/cyclic_pipeline/: cyclic_pipeline.cpp
intra_process_demo/src/image_pipeline/: camera_node.cpp  image_pipeline_all_in_one.cpp  image_pipeline_with_two_image_view.cpp  image_view_node.cpp  watermark_node.cpp
intra_process_demo/src/two_node_pipeline/: two_node_pipeline.cpp
intra_process_demo/test/: cyclic_pipeline.regex  two_node_pipeline.regex
lifecycle/src/: lifecycle_service_client_py.py
pendulum_control/src/: pendulum_demo.cpp  pendulum_logger.cpp  pendulum_teleop.cpp
topic_monitor/topic_monitor/launch_files/: launch_depth_demo.py  launch_fragmentation_demo.py
type_masquerading_demo/: CMakeLists.txt  package.xml
type_masquerading_demo/src/type_masquerading_vector3/: type_masquerading_vector3.cpp
vision_examples_2/face_detector/: CMakeLists.txt  package.xml
vision_examples_2/face_detector/src/: face_detector_node.hpp  face_detector_pipeline.cpp  linemod.cpp  linemod_detect.orig.cpp  linemod_node.cpp  linemod_node.hpp  linemod_pipeline.cpp  linemod_trainer.cpp
vision_examples_2/pcl_3d_clusters/src/: point_cloud_utils.cpp
vision_examples_2/vision_examples/: package.xml
vision_msgs_proposal_2/: CMakeLists.txt  README.md  package.xml
vision_msgs_proposal_2/msg/: Classification2D.msg  Detection2D.msg  Detection3D.msg  Detection3DArray.msg  VisionInfo.msg
