<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>vision_msgs</name>
  <version>0.0.0</version>
  <description>
    PROPOSED DRAFT of: Classifier-agnostic computer vision classification and
    detection messages.
  </description>
  <maintainer email="adam.d.allevato@gmail.com">Adam Allevato</maintainer>
  <license>BSD</license>
  <author email="adam.d.allevato@gmail.com">Adam Allevato</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
