<?xml version="1.0"?>
<package format="2">
  <name>vision_examples</name>
  <version>0.0.0</version>
  <description>Various example computer vision classifiers</description>

  <maintainer email="adam.d.allevato@gmail.com">Adam Allevato</maintainer>
  <author email="adam.d.allevato@gmail.com">Adam Allevato</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf</depend>
  <depend>vision_msgs</depend>
  <depend>pcl_3d_cluster</depend>
  <depend>tensorflow_inception_imagenet</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
